<resources>
    <string name="app_name">LiteApp</string>
    <string name="registration">Реєстрація</string>
    <string name="email">Email</string>
    <string name="fullName">ПІБ</string>
    <string name="phone">Номер телефону</string>
    <string name="selectImage">Обрати фото</string>
    <string name="userPhoto">User\'s photo</string>
    <string name="login">Вхід</string>
    <string name="password">Пароль</string>
    <string name="repeatPassword">Повторіть пароль</string>
    <string name="loginButton">Увійти</string>
    <string name="registerButton">Зареєструватися</string>
    <string name="home">Домашня сторінка</string>
    <string name="search">Пошук</string>
    <string name="main_page_header">Головна сторінка</string>
    <string name="menu_home">Головна</string>
    <string name="menu_login">Вхід</string>
    <string name="menu_register">Реєстрація</string>
</resources>